# AMP_LLMs

./: .coverage  .gitignore  ModelFile  NCT04043065.txt  README.md  amp_autoupdate.sh  amp_autoupdate_dev.sh  batch_runner.py  bugs.txt  config.py  data_fetcher_tester.py  data_fetchers.py  env_setup.py  interactive.py  llm_runner.py  llm_utils.py  main.py  modelfile_utils.py  nct_verbose.txt  networking.py  output_handler.py  prompt_for_connection.py  prompt_input.py  requirements.txt  ssh_connection.py  test_setup.py  utils.py  validation_ref.md
amp_llm_v3/: .env.example  .gitignore  README.MD  cache_cleanup.py  fix_services.sh  main.py  pyproject.toml  requirements-webapp.txt  requirements.txt  services.sh  setup_auto_restart.sh  start  start.bat  start_all_services.sh
amp_llm_v3/docs/: README.md  bug_report.md  validation_ref.md
amp_llm_v3/docs/api/: extended_api_guide.md
amp_llm_v3/docs/guides/: extended_api_integration.md
amp_llm_v3/docs/setup/: API.md
amp_llm_v3/scripts/: cache_cleanup.py  generate_modelfile.py  index_trials.py  manage_database.py  self_heal.py  setup.py  validate.py
amp_llm_v3/src/: requirements.txt
amp_llm_v3/src/amp_llm/: py.typed
amp_llm_v3/src/amp_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amp_llm_v3/standalone modules/agent_annotate/: .gitignore  CONTINUATION_PLAN.md  LEARNING_RUN_PLAN.md  (+2 more)
amp_llm_v3/tests/: conftest.py
amp_llm_v3/webapp/: README.md  USEFUL_SYS_COMMANDS.md  __init__.py  config.py  fix_cloudfare.sh  main.py  restart_services.md  server.py  setup_production.sh
(+1718 files in other folders)
